--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPS GAME</title>
-    <script src="rps-game.js"></script>
+    <script src="rps-game.js" defer></script>
 </head>
 <body>
-    
+    <div class="choice">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
+    <div class="display"></div>
 </body>
 </html>
