--- a/index.html
+++ b/index.html
@@ -7,11 +7,46 @@
     <script src="rps-game.js" defer></script>
 </head>
 <body>
-    <div class="choice">
-        <button id="rock">Rock</button>
-        <button id="paper">Paper</button>
-        <button id="scissors">Scissors</button>
+    <div class="introduction">Welcome to the <span>RPS GAMES</span></div>
+    <div class="opponent">
+        <div>This is your opponent</div>
+        <img src="#" alt="#">
     </div>
-    <div class="display"></div>
+    <div class="instructions">
+        <div>First to <span>5</span> wins</div>
+        <div>Good Luck!!</div>
+    </div>
+    <div class="choice">
+        <div>
+            <div>Choose your Weapon</div>
+        </div>
+        <div id="rock">
+            <img src="#" alt="an image of a rock">
+            <div>Rock</div>
+        </div>
+        <div id="paper">
+            <img src="#" alt="an image of a paper">
+            <div>Paper</div>
+        </div>
+        <div id="scissors">
+            <img src="#" alt="an image of a pair of scissors">
+            <div>Scissors</div>
+        </div>
+    </div>
+    <div class="display">
+        <div>Let's Play</div>
+        <div>
+            <div class="human">
+                <img src="" alt="">
+                <div>:</div>
+                <div>0</div>
+            </div>
+            <div class="computer">
+                <img src="" alt="">
+                <div>:</div>
+                <div>0</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
