--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPS GAME</title>
     <script src="rps-game.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="introduction">Welcome to the <span>RPS GAMES</span></div>
