refactor: put rock, paper, scissors in one div

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <script src="rps-game.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="introduction">Welcome to the <span>RPS GAMES</span></div>
     <div class="opponent">
@@ -21,17 +23,19 @@
         <div>
             <div>Choose your Weapon</div>
         </div>
-        <div id="rock">
-            <img src="#" alt="an image of a rock">
-            <div>Rock</div>
-        </div>
-        <div id="paper">
-            <img src="#" alt="an image of a paper">
-            <div>Paper</div>
-        </div>
-        <div id="scissors">
-            <img src="#" alt="an image of a pair of scissors">
-            <div>Scissors</div>
+        <div>
+            <div id="rock">
+                <img src="#" alt="an image of a rock">
+                <div>Rock</div>
+            </div>
+            <div id="paper">
+                <img src="#" alt="an image of a paper">
+                <div>Paper</div>
+            </div>
+            <div id="scissors">
+                <img src="#" alt="an image of a pair of scissors">
+                <div>Scissors</div>
+            </div>
         </div>
     </div>
     <div class="display">
@@ -50,4 +54,5 @@
         </div>
     </div>
 </body>
+
 </html>
