style: add flexbox to display and choice classes and child classes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div>
             <div>Choose your Weapon</div>
         </div>
-        <div>
+        <div class="rps">
             <div id="rock">
                 <img src="#" alt="an image of a rock">
                 <div>Rock</div>
@@ -40,7 +40,7 @@
     </div>
     <div class="display">
         <div>Let's Play</div>
-        <div>
+        <div class="players">
             <div class="human">
                 <img src="" alt="">
                 <div>:</div>
