feat: add div for describing each weapon in rps class

--- a/index.html
+++ b/index.html
@@ -26,14 +26,17 @@
         <div class="rps">
             <div id="rock">
                 <img src="#" alt="an image of a rock">
+                <div>The rock is a solid, unyielding force, crushing scissors with ease. However, its strength is no match for paper, which wraps and defeats it effortlessly.</div>
                 <div>Rock</div>
             </div>
             <div id="paper">
                 <img src="#" alt="an image of a paper">
+                <div>Paper is a flexible and clever weapon, wrapping around the rock to secure a victory. However, its thin surface is easily cut by scissors, leaving it vulnerable.</div>
                 <div>Paper</div>
             </div>
             <div id="scissors">
                 <img src="#" alt="an image of a pair of scissors">
+                <div>Scissors are sharp and quick, slicing through paper with precision. But their edges are no match for the rock, which crushes them with a single strike.</div>
                 <div>Scissors</div>
             </div>
         </div>
