feat: add images to img elements in index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="introduction">Welcome to the <span>RPS GAMES</span></div>
     <div class="opponent">
         <div>This is your opponent</div>
-        <img src="#" alt="#">
+        <img src="images/Computer1.svg" alt="vexels.com - Old computer machine PNG Design" height="200px" width="200px">
     </div>
     <div class="instructions">
         <div>First to <span>5</span> wins</div>
@@ -25,17 +25,17 @@
         </div>
         <div class="rps">
             <div id="rock">
-                <img src="#" alt="an image of a rock">
+                <img src="images/Rock.png" alt="freepick.com - Hand drawn rock formation" height="200px" width="200px">
                 <div>The rock is a solid, unyielding force, crushing scissors with ease. However, its strength is no match for paper, which wraps and defeats it effortlessly.</div>
                 <div>Rock</div>
             </div>
             <div id="paper">
-                <img src="#" alt="an image of a paper">
+                <img src="images/Paper.png" alt="freepick.com - Vector paper sheet isolated on transparent background" height="200px" width="200px">
                 <div>Paper is a flexible and clever weapon, wrapping around the rock to secure a victory. However, its thin surface is easily cut by scissors, leaving it vulnerable.</div>
                 <div>Paper</div>
             </div>
             <div id="scissors">
-                <img src="#" alt="an image of a pair of scissors">
+                <img src="images/Scissors.png" alt="imgbin.com - Scissors Cartoon PNG" height="200px" width="200px">
                 <div>Scissors are sharp and quick, slicing through paper with precision. But their edges are no match for the rock, which crushes them with a single strike.</div>
                 <div>Scissors</div>
             </div>
@@ -45,12 +45,12 @@
         <div>Let's Play</div>
         <div class="players">
             <div class="human">
-                <img src="" alt="">
+                <img src="images/Human.png" alt="Wikimedia.org - User icon-cp" height="100px" width="100px">
                 <div>:</div>
                 <div>0</div>
             </div>
             <div class="computer">
-                <img src="" alt="">
+                <img src="images/Computer2.svg" alt="freesvg.org - old style computer vector image" height="100px" width="100px">
                 <div>:</div>
                 <div>0</div>
             </div>
