refactor: change human image width to auto

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div>0</div>
             </div>
             <div class="computer">
-                <img src="images/Computer2.svg" alt="freesvg.org - old style computer vector image" height="100px" width="100px">
+                <img src="images/Computer2.svg" alt="freesvg.org - old style computer vector image" height="100px" width="auto">
                 <div>:</div>
                 <div>0</div>
             </div>
