feat: add line break element in introduction class

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="introduction">Welcome to the <span>RPS GAMES</span></div>
+    <div class="introduction">Welcome to the <br> <span>RPS GAMES</span></div>
     <div class="opponent">
         <div>This is your opponent</div>
         <img src="images/Computer1.svg" alt="vexels.com - Old computer machine PNG Design" height="200px" width="200px">
