chore: add class to instruction class child div

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="instructions">
         <div>First to <span>5</span> wins</div>
-        <div>Good Luck!!</div>
+        <div class="luck">Good Luck!!</div>
     </div>
     <div class="choice">
         <div>
