chore: add class to first child div in choice class

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="choice">
         <div>
-            <div>Choose your Weapon</div>
+            <div class="option">Choose your Weapon</div>
         </div>
         <div class="rps">
             <div id="rock">
