chore: add classes to rps child divs

--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
             <div class="option">Choose your Weapon</div>
         </div>
         <div class="rps">
-            <div id="rock">
+            <div id="rock" class="box">
                 <img src="images/Rock.png" alt="freepick.com - Hand drawn rock formation" height="200px" width="200px">
                 <div>The rock is a solid, unyielding force, crushing scissors with ease. However, its strength is no match for paper, which wraps and defeats it effortlessly.</div>
-                <div>Rock</div>
+                <div class="text">Rock</div>
             </div>
-            <div id="paper">
+            <div id="paper" class="box">
                 <img src="images/Paper.png" alt="freepick.com - Vector paper sheet isolated on transparent background" height="200px" width="200px">
                 <div>Paper is a flexible and clever weapon, wrapping around the rock to secure a victory. However, its thin surface is easily cut by scissors, leaving it vulnerable.</div>
-                <div>Paper</div>
+                <div class="text">Paper</div>
             </div>
-            <div id="scissors">
+            <div id="scissors" class="box">
                 <img src="images/Scissors.png" alt="imgbin.com - Scissors Cartoon PNG" height="200px" width="200px">
                 <div>Scissors are sharp and quick, slicing through paper with precision. But their edges are no match for the rock, which crushes them with a single strike.</div>
-                <div>Scissors</div>
+                <div class="text">Scissors</div>
             </div>
         </div>
     </div>
