chore: add class name to display first child div

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </div>
     <div class="display">
-        <div>Let's Play</div>
+        <div class="score">Let's Play</div>
         <div class="players">
             <div class="human">
                 <img src="images/Human.png" alt="Wikimedia.org - User icon-cp" height="100px" width="100px">
