chore: add classes to human and computer div classes

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
             <div class="human">
                 <img src="images/Human.png" alt="Wikimedia.org - User icon-cp" height="100px" width="100px">
                 <div>:</div>
-                <div>0</div>
+                <div class="humanScore">0</div>
             </div>
             <div class="computer">
                 <img src="images/Computer2.svg" alt="freesvg.org - old style computer vector image" height="100px" width="auto">
                 <div>:</div>
-                <div>0</div>
+                <div class="computerScore">0</div>
             </div>
         </div>
     </div>
