--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
             </div>
         </div>
     </div>
+    <div class="reset">
+        <button>Restart</button>
+    </div>
 </body>
 
 </html>
