chore: change opponent class image in index.html file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="introduction">Welcome to the <br> <span>RPS GAMES</span></div>
     <div class="opponent">
         <div>This is your opponent</div>
-        <img src="images/Computer1.svg" alt="vexels.com - Old computer machine PNG Design" height="200px" width="200px">
+        <img src="images/Computer1.png" alt="charatoon.com - Angry Computer" height="200px" width="200px">
     </div>
     <div class="instructions">
         <div>First to <span>5</span> wins</div>
