chore: change computer class image in index.html file

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="humanScore">0</div>
             </div>
             <div class="computer">
-                <img src="images/Computer2.svg" alt="freesvg.org - old style computer vector image" height="100px" width="auto">
+                <img src="images/Computer1.png" alt="charatoon.com - Angry Computer" height="100px" width="auto">
                 <div>:</div>
                 <div class="computerScore">0</div>
             </div>
